--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "axios": "^0.19.0",
     "graphql": "^14.3.1",
     "isomorphic-fetch": "^2.2.1",
     "keyboardjs": "^2.5.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-router-dom": "^5.0.0",
     "react-redux": "^7.1.0-rc.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-toastify": "^4.4.0",
     "react-use": "^9.4.0",
     "rebound": "^0.1.0",
+    "recharts": "^1.6.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.3",
     "urql": "^1.1.1"
