--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "apexcharts": "^3.6.7",
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
     "graphql": "^14.3.1",
     "isomorphic-fetch": "^2.2.1",
     "keyboardjs": "^2.5.1",
     "react": "16.8.6",
+    "react-apexcharts": "^1.3.3",
     "react-dom": "16.8.6",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.0.0",
